change links on readme and index files

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
     <div class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Caleb Ariko</a>.
+      Coded by <a href="https://github.com/calebariko/calculator-web-app">Caleb Ariko</a>.
     </div>
   </section>
 
